<resources>
    <string name="app_name">电影帮手</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failure">登录失败</string>
    <string name="register">注册</string>
    <string name="real_name">真实姓名</string>
    <string name="done_and_login">完成并登陆</string>
    <string name="empty_username">空的用户名</string>
    <string name="phone_number">电话号码</string>
    <string name="empty_password">空的密码</string>
    <string name="unmatched_password">密码不一致</string>
    <string name="empty_phone_number">空的电话号码</string>
    <string name="empty_real_name">真实姓名为空</string>
    <string name="cancel">取消</string>
    <string name="unknown_error">未知错误</string>
    <string name="log_out">登出</string>
    <string name="confirm_log_out">确认登出</string>
    <string name="confirm">确认</string>
    <string name="add_movie">添加电影</string>
    <string name="exit_editing">退出编辑</string>
    <string name="confirm_exit_editing">确认退出编辑？</string>
    <string name="select_cinema">选择电影院</string>
    <string name="unknown_distance">未知距离</string>
    <string name="select_time">选择时间</string>
    <string name="select_seat">选择座位</string>
    <string name="submit_order">提交订单</string>
    <string name="submit_success">预订成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="order_details">订单详情</string>
    <string name="done">确定</string>
    <string name="movie_name_title">电影名称：</string>
    <string name="movie_description_title">简介：</string>
    <string name="movie_cast_title">主演：</string>
    <string name="cinema_name_title">影院名称：</string>
    <string name="cinema_address_title">影院地址：</string>
    <string name="show_time_title">电影时间：</string>
    <string name="seat_title">预定座位：</string>
    <string name="add_section">新增电影场次</string>
    <string name="edit_section">编辑电影场次</string>
    <string name="empty_input_error">电影名称/主演/简介不能为空</string>
    <string name="empty_section_error">必须添加至少一个场</string>
    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_success">取消成功</string>
    <string name="cancel_failure">取消失败</string>
</resources>
