<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/movie_name_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_name_title"/>

        <TextView
            android:id="@+id/movie_name_value"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cinema_name_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema_name_title"/>

        <TextView
            android:id="@+id/cinema_name_value"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cinema_address_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema_address_title"/>

        <TextView
            android:id="@+id/cinema_address_value"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_time_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_time_title"/>

        <TextView
            android:id="@+id/show_time_value"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seat_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat_title"/>

        <TextView
            android:id="@+id/seat_value"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

</LinearLayout>