<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/username_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/use_name_field"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/real_name_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name"/>

        <EditText
            android:id="@+id/real_name_field"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_number_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/section_field_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/phone_number_field"
            android:layout_width="@dimen/section_field_width"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:paddingLeft="@dimen/section_field_horizontal_padding"/>

    </LinearLayout>

</LinearLayout>